
	* src/nact-main.c (main):
	Only display traces from runtime library when in maintainer mode.

	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h (nact_iactions_list_brief_tree_dump):
	Briefly dump the tree store content.
	(nact_iactions_list_runtime_init_toplevel): Grab the focus at start.
	(on_focus_in, on_focus_out): Track the focus in the treeview.

	* src/nact/nact-main-menubar.c (nact_main_menubar_runtime_init):
	Display a Maintainer menu when in maintainer mode.
	Add BriefTreeStoreDumpItem new item.
	Display a first toolbar.
	(on_save_activated): Also save non-valid items.
	(on_update_sensitivities): Disable edit actions when the focus is
	not in the treeview.

	* src/nact/nact-main-statusbar.c
	(nact_main_statusbar_display_with_timeout):
	Actually put a timeout to pop the status message.

	* src/nact/nact-tree-model.c (nact_tree_model_insert):
	Add debug traces.
	(nact_tree_model_fill): Check validity status at load time.

	* src/nact/nact-window.c (nact_window_save_item):
	Full dump of the saved item.

	* src/nact/nautilus-actions-config-tool.actions:
	Define a placeholder for the Maintainer menu.
	Define a first toolbar.

	* src/nact/nautilus-actions-config-tool.ui:
	Replace the GtkToolbar with a VBox placeholder.

	* src/nact/nautilus-actions-maintainer.actions: New file.

	* src/nact/Makefile.am: Updated accordingly.

	* src/runtime/na-gconf-provider.c (read_item_action_profile_properties):
	Load all found items, emitting a warning when non valid.

	* src/runtime/na-object-action.c (object_is_valid):
	An action is valid if it has at least one valid profile.

	* src/runtime/na-object-profile.c (object_is_valid):
	A profile requires rather a command to be valid that a label.

2009-10-08 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-object-api.h (na_object_remove_item):
	Moved to runtime library.

	* src/common/na-object-item-fn.h:
	* src/common/na-object-item.c (na_object_item_remove_item):
	Moved to runtime library.
